TWC3167-XXXX : Admin rule - pop up design changes, manage PCT - alignment fixes, common CSS Fixes (#1555)

--- a/Intel.MyDeals/Client/src/app/admin/kendo_grid.css
+++ b/Intel.MyDeals/Client/src/app/admin/kendo_grid.css
@@ -903,6 +903,20 @@ kendo-grid.security-engine-tables .k-grid-content {
 .width-changing-dialog .k-dialog {
     width: 480px !important
 }
+
+.k-button.grey-blue-btn {
+    color: #444 !important;
+    border-color: #ebebeb !important;
+    background-color: #ebebeb !important;
+    padding: 1.5em 0;
+}
+
+.k-button.grey-blue-btn:hover, .k-button.grey-blue-btn:focus {
+    color: #fff !important;
+    border-color: var(--light-blue) !important;
+    background-color: var(--light-blue) !important;
+}
+
 .mat-slideDisable-Custom {
     opacity: 0.7 !important;
 }
