--- a/Intel.MyDeals/Client/src/app/style/common.css
+++ b/Intel.MyDeals/Client/src/app/style/common.css
@@ -1,1 +1,183 @@
 ﻿:root{--white:#fff;--black:#000;--light-blue:#00AEEF;--dark-blue:#0071C5;--selected-blue:#004280;--orange-clr:#FFA300}body{font-size:14px;font-family:"Intel Clear","Helvetica Neue",Helvetica,Arial,sans-serif!important;font-weight:400}input[type="text"]:focus-visible{outline:none}.k-filter-menu .k-button + .k-button{margin-right:0}.k-filter-menu .k-button,.k-filter-menu .k-button.k-primary:hover,.k-filter-menu .k-button:hover{font-size:14px;font-weight:500;text-transform:uppercase;background:transparent!important;border-color:transparent!important;line-height:1.143em;padding:9px 14px;display:inline-block;vertical-align:middle;box-shadow:none;margin:0;width:50%;border-radius:0;text-align:center;cursor:pointer;color:#444!important;text-decoration:none}.k-filter-menu .k-button.k-primary,.k-filter-menu .k-button.k-primary:hover{border-left-color:#f0f0f0!important;float:right;color:var(--light-blue)!important}.k-list .k-item.k-state-selected{color:#fff!important;background-color:var(--light-blue)!important;font-size:12px;font-family:'Intel Clear'!important}.k-list .k-item.k-state-selected:hover{border:1px solid #ebebeb!important}.k-list .k-item.k-state-focused.k-state-selected{background-color:var(--light-blue)!important;color:#fff!important}.k-list .k-item.k-state-selected:hover{background-color:var(--light-blue)!important}.k-list .k-item.k-state-focused{box-shadow:none!important}.k-list .k-item{font-size:12px!important;font-family:'Intel Clear'!important;padding:.5rem .5rem!important;line-height:16px!important;min-height:auto!important}.k-list .k-item:hover{background:#ebebeb!important}kendo-grid.manage-tables table tr.k-detail-row td.k-detail-cell{padding:0}kendo-grid.manage-tables table tr.k-detail-row td.k-detail-cell .margin-reduces{margin:0}kendo-grid.reduce-child-table table tr td{padding:5px;font-size:12px!important}
+body {
+    overflow: hidden
+}
+
+.row {
+    --bs-gutter-x: 0 !important
+}
+
+h5 {
+    font-family: "Intel Clear" !important;
+    font-weight: 200 !important;
+    font-size: 18px !important;
+    margin: 0 4px 2px 6px !important;
+    font-style: normal !important;
+    line-height: 1.1 !important
+}
+
+.k-window {
+    min-height: 50px !important
+}
+
+.btn-default:hover, .btn-default:focus, .btn-default.focus {
+    color: #0071c5 !important;
+    border-color: #b1babf !important;
+    background-color: #e7e7e7 !important
+}
+
+.mat-list-base .mat-list-item .mat-list-item-content, .mat-list-base .mat-list-option .mat-list-item-contentt {
+    display: block !important;
+    padding: 0 !important
+}
+
+.k-bare:hover {
+    background-color: #008bd1 !important;
+    border-color: #008bd1 !important;
+    border-radius: 50% !important
+}
+
+.k-dialog.k-alert .k-content, .k-dialog.k-confirm .k-content {
+    padding: 2.4em
+}
+
+.k-dialog .k-content {
+    border-bottom-right-radius: 2px;
+    border-bottom-left-radius: 2px
+}
+
+.k-dialog .k-content {
+    margin: 0;
+    padding: 1.8em 1em 1.8em 1em
+}
+
+.k-dialog .k-dialog-buttongroup.k-dialog-button-layout-stretched {
+    width: 100%
+}
+
+    .k-dialog .k-dialog-buttongroup.k-dialog-button-layout-stretched .k-button:last-child {
+        border-bottom-right-radius: 2px;
+        border-right: 0
+    }
+
+    .k-dialog .k-dialog-buttongroup.k-dialog-button-layout-stretched .k-button:first-child {
+        border-bottom-left-radius: 2px;
+        border-left: 0
+    }
+
+    .k-dialog .k-dialog-buttongroup.k-dialog-button-layout-stretched .k-button {
+        display: inline-block;
+        padding: 1.5em 0;
+        border-radius: 0;
+        border-bottom: 0;
+        box-shadow: none
+    }
+
+.k-dialog .k-button, .k-dialog .k-toolbar .k-button {
+    line-height: 1.143em !important;
+    background: #fafafa !important
+}
+
+.k-dialog .k-dialog-buttongroup.k-dialog-button-layout-stretched .k-button:last-child {
+    border-bottom-right-radius: 2px;
+    border-right: 0
+}
+
+.k-dialog .k-dialog-buttongroup.k-dialog-button-layout-stretched .k-button:first-child {
+    border-bottom-left-radius: 2px;
+    border-left: 0
+}
+
+.k-dialog .k-button:hover, .k-dialog .k-button.k-state-hover, .k-dialog .k-button:active:hover, .k-dialog .k-button.k-state-active:hover {
+    color: #444;
+    border-color: #ebebeb !important;
+    background-color: #ebebeb !important
+}
+
+.k-dialog .k-dialog-buttongroup, .k-dialog .k-dialog-buttongroup .k-button {
+    border-width: 0 !important
+}
+
+.k-dialog .header-fixes li.dropdown .dropdown-menu {
+    border-radius: 0;
+    border: 1px solid #eee
+}
+
+.dateclass.k-datepicker .k-picker-wrap.k-state-focused {
+    border-color: #e7e7e7 !important;
+    background-color: #fafafa !important;
+    box-shadow: none !important
+}
+
+.dateclass.k-datepicker {
+    border-bottom: 2px solid #0071c5 !important;
+    background: #fafafa !important
+}
+
+    .dateclass.k-datepicker .k-select {
+        background-color: transparent !important;
+        border: 0 !important;
+        color: #727578 !important
+    }
+
+.dateclass.k-picker-wrap.k-state-default > .k-select {
+    border-color: #fafafa
+}
+
+.dateclass.k-datepicker .k-picker-wrap, .k-timepicker .k-picker-wrap, .k-datetimepicker .k-picker-wrap, .k-dateinput .k-dateinput-wrap {
+    border-color: #ced4da4f;
+    color: #495057;
+    background-color: #f1ebeb00 !important;
+    font-family: 'Intel Clear'
+}
+
+    .dateclass.k-datepicker .k-picker-wrap:hover {
+        background-color: #ffffff !important
+    }
+
+.dateclass.k-datepicker .k-input:hover {
+    background-color: #ffffff !important
+}
+
+.dateclass .k-icon:hover {
+    color: #878383d9 !important
+}
+
+a:focus {
+    outline: thin dotted;
+    outline: 0 auto -webkit-focus-ring-color;
+    outline-offset: 0
+}
+
+.k-animation-container-shown .k-list-container .k-list-scroller {
+    overflow-x: hidden
+}
+
+kendo-datepicker.date-dashboard:hover, kendo-datepicker.date-dashboard:focus, kendo-datepicker.date-dashboard:focus-within {
+    border-color: #b1babf;
+    box-shadow: 0 2px 6px rgb(0 0 0 / 20%),0 2px 3px rgb(0 0 0 / 5%)
+}
+
+
+.k-calendar .k-state-selected .k-link {
+    border-color: #005dc2 !important;
+    color: #ffffff !important;
+    background-color: #00aeef !important;
+}
+
+.k-calendar .k-state-focused .k-link {
+    box-shadow: inset 0 0 0 2.5px rgb(194 196 199 / 71%) !important;
+}
+
+.k-calendar .k-month .k-link, .k-calendar .k-calendar-monthview .k-link {
+    width: 40px !important;
+    height: 40px !important;
+    border-radius: 50px !important;
+}
+
+.k-calendar .k-content .k-today.k-state-focused .k-link,
+.k-calendar .k-calendar-content .k-today.k-state-focused .k-link,
+.k-calendar .k-content .k-today .k-link,
+.k-calendar .k-calendar-content .k-today .k-link {
+    box-shadow: none !important
+}
